<resources>
    <string name="app_name">LifeCircle</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_your_password">Enter your password...</string>
    <string name="enter_your_email">Enter your email...</string>
    <string name="you_don_t_have_account">Don\'t have account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_your_password">Confirm your password... </string>
    <string name="you_have_account">Have account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_the_password">Confirm the password...</string>
    <string name="enter_your_phone_number">Enter your phone number...</string>
    <string name="enter_name_surname">Enter name+surname...</string>
    <string name="create_requirement">Create Requirement</string>
    <string name="list_active_requirements">List Active Requirements</string>
    <string name="create">CREATE</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="mine_activities">Mine Activities</string>
    <string name="active_activities">Active Activities</string>
    <string name="inprogress_requirements">IN-PROGRESS REQUIREMENTS</string>
    <string name="done_requirements">DONE REQUIREMENTS</string>
    <string name="rate">RATE</string>
    <string name="done_activities">DONE ACTIVITIES</string>

    <string-array name="ratings">
        <item>Select</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>

</resources>