<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    android:background="#69f542">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        app:title="@string/app_name"/>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#69f542"
    android:paddingHorizontal="30dp"
    android:layout_marginTop="100dp">

    <TextView
        android:id="@+id/signup"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="#06a4d4"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edittext_field"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingVertical="10dp"
            android:paddingLeft="30dp"
            android:textColor="#06a4d4"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/fullname"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/enter_name_surname"
            android:paddingVertical="10dp"
            android:textColor="#06a4d4"
            android:inputType="text"
            android:paddingLeft="30dp"
            android:drawableLeft="@drawable/ic_baseline_drive_file_rename_outline_24"
            android:background="@drawable/edittext_field"/>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/enter_your_password"
            android:paddingVertical="10dp"
            android:textColor="#06a4d4"
            android:inputType="textVisiblePassword"
            android:paddingLeft="30dp"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:background="@drawable/edittext_field"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/password1"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/confirm_the_password"
            android:paddingVertical="10dp"
            android:textColor="#06a4d4"
            android:inputType="textPassword"
            android:paddingLeft="30dp"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:background="@drawable/edittext_field"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/phone"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/enter_your_phone_number"
            android:paddingVertical="10dp"
            android:textColor="#06a4d4"
            android:inputType="text"
            android:paddingLeft="30dp"
            android:drawableLeft="@drawable/ic_baseline_phone_24"
            android:background="@drawable/edittext_field"/>


    </RelativeLayout>

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Organizer"
            android:textStyle="bold"
            android:textColor="#06a4d4"
            android:buttonTint="@color/colorPrimary"
            android:onClick="radioClick"/>

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Volunteer"
            android:buttonTint="@color/colorPrimary"
            android:textStyle="bold"
            android:textColor="#06a4d4"
            android:onClick="radioClick"/>

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Older Person"
            android:textStyle="bold"
            android:textColor="#06a4d4"
            android:buttonTint="@color/colorPrimary"
            android:checked="true"
            android:onClick="radioClick"/>

    </RadioGroup>

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Sign Up"
        android:textColor="#06a4d4"
        android:layout_marginTop="18dp"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_have_account"
            android:textColor="#000000"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/signInTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign In"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textColor="#06a4d4"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>

</ScrollView>
</LinearLayout>